# PhysicalCar-Autoware

./: .gitignore  .run.sh.swp  192.168.20-metadata.json  README.md  TOPIC_TEST_SCENARIOS.md  aa.txt  cam.py  command.md  config.md  config_validate.sh  dds.sh  frames_2026-04-21_17.36.06.gv  frames_2026-04-22_10.07.18.gv  frames_2026-04-28_09.04.02.gv  frames_2026-04-28_09.37.09.gv  frames_2026-04-28_11.50.42.gv  ip_set.sh  lanelet2_map_mangi.osm  os-122124000141-metadata.json  prepare.md  prepare.sh  prepare_explanation.md  recover_dockerimage.sh  run.sh  run2.sh
src/: approx_camera_info_publisher.tar.xz
src/approx_camera_info_publisher/: README.md  README_kr.md  package.xml  setup.cfg  setup.py
src/approx_camera_info_publisher/approx_camera_info_publisher/: __init__.py  approx_camera_info_publisher_node.py
src/approx_camera_info_publisher/config/: dfov_example.yaml  explicit_intrinsics_example.yaml  hfov_example.yaml
src/approx_camera_info_publisher/launch/: approx_camera_info.launch.py  approx_camera_info_with_params.launch.py
src/approx_camera_info_publisher/test/: test_camera_info_builder.py  test_fov_intrinsics.py
src/autoware_auto_msgs/autoware_auto_msgs/design/: autoware_auto_msgs-design.md
src/autoware_vehicle_msgs/: CMakeLists.txt  COLCON_IGNORE  package.xml
src/carla_crop_box_filter/: CMakeLists.txt  package.xml
src/carla_crop_box_filter/include/carla/crop_box_filter/: crop_box_filter_node.hpp
src/carla_crop_box_filter/src/: crop_box_filter_node.cpp
src/carla_pointcloud_preprocessor/: CMakeLists.txt  package.xml
src/carla_pointcloud_preprocessor/config/vehicle/: vehicle_info.param.yaml
src/carla_pointcloud_preprocessor/launch/: carla_pointcloud_preprocessor.launch.py
src/install/: local_setup.sh  setup.sh
src/log/: latest_build
src/novatel_oem7_driver/config/: std_msg_topics.yaml
src/novatel_oem7_driver/launch/: oem7_net.launch.py
src/novatel_oem7_driver/src/: odometry_handler.cpp
src/tod_autoware_bridge/: CMakeLists.txt  README.md  package.xml
src/tod_autoware_bridge/include/tod_autoware_bridge/: tod_autoware_bridge_node.hpp
src/tod_autoware_bridge/launch/: tod_autoware_bridge.launch.py
src/tod_autoware_bridge/params/: cfg.yaml
src/tod_autoware_bridge/src/: main.cpp  tod_autoware_bridge_node.cpp
src/yhs_autoware_vehicle_status_bridge/: CMakeLists.txt  README.md  package.xml
src/yhs_autoware_vehicle_status_bridge/launch/: yhs_autoware_vehicle_status_bridge.launch.py
src/yhs_autoware_vehicle_status_bridge/params/: yhs_autoware_vehicle_status_bridge.param.yaml
src/yhs_autoware_vehicle_status_bridge/src/: yhs_autoware_vehicle_status_bridge_node.cpp
src/yhs_can_control/: CMakeLists.txt  package.xml
src/yhs_can_control/include/yhs_can_control/: yhs_can_control_node.hpp
src/yhs_can_control/launch/: tod_autoware_bridge.launch.py
src/yhs_can_control/params/: cfg.yaml  tod_autoware_bridge.yaml
src/yhs_can_control/src/: back.txt  tod_autoware_bridge_node.cpp  yhs_can_control_node.cpp
src/yhs_can_interfaces/: package.xml
