<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>yhs_autoware_vehicle_status_bridge</name>
  <version>0.0.1</version>
  <description>Bridge YHS chassis feedback into Autoware vehicle status topics.</description>
  <maintainer email="futuredrive@example.com">futuredrive</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>autoware_auto_vehicle_msgs</depend>
  <depend>rclcpp</depend>
  <depend>yhs_can_interfaces</depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
